2019-10-16  Simon Pickartz  <pickartz@par-tec.com>	-	5.4.2-1

	* Fix: Preparation of the rendezvous request message

2019-10-08    Jens Hauke  <hauke@par-tec.com>	-	5.4.1-1

	* Workaround: TCP reconnect, if a call to connect() do not progress.
	New environment variables:
	PSP_RECONNECT_TIMEOUT	timeout in ms before reconnecting after an
				error
	PSP_CONNECT_STALLED	max number of reconnect timeouts before
				reconnecting even without an error on the
				connection.

2019-09-19    Jens Hauke  <hauke@par-tec.com>	-	5.4.0-1

	* Fix rendezvous message order: In rare cases small messages had
	overtaken large ones with the same MPI TAG.

	* New: pscom_is_cuda_enabled(void) to query for CUDA support at
	runtime.

2019-07-09  Jens Hauke  <hauke@par-tec.com>	-	5.3.1-1

	* Enhancement:
	Synchronized connection shutdown with inline EOF messages. This
	improves "close connection" detection in cases where the
	connection guards can't be used.

	* Enhancement:
	Dump a stack backtrace after SIGSEGV (PSP_SIGSEGV=1)

	* Workaround: PSM2: Segfaults in psm2_ep_disconnect() and
	psm2_mq_ipeek(): Wait at least PSP_PSM_CLOSE_DELAY milliseconds
	after the last call to psm2_mq_send() before calling
	psm2_ep_disconnect().

2019-03-19  Simon Pickartz <pickartz@par-tec.com>

	* Enhancement:
	Add optional CUDA awareness (compile time option)

2019-04-08  Jens Hauke  <hauke@par-tec.com>	-	5.3.0-1

	* Enhancement:
	Optional debug output with timing (PSP_DEBUG_TIMING)

	PSP_DEBUG_TIMING:
	0       off (default),
	1,"us"  "ssss.uuuuuu" seconds and microseconds since pscom_init
	"date"  "YYYY-MM-DD_hh:mm:ss.uuuuuu" in localtime
	"wall"  "ssss.uuuuuu" seconds and microseconds since the Epoch
	"delta" "ssss.uuuuuu" seconds and microseconds since last log

2019-03-19  Simon Pickartz <pickartz@par-tec.com>

	* Fix: pscom4velo (Extoll): registration caches

2019-02-12  Jens Hauke  <hauke@par-tec.com>	-	5.2.9-1

2019-02-11  Simon Pickartz <pickartz@par-tec.com>
